--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include services.html %}
+{% include whatwedo.html %}
 {% include about.html %}
 {% include timeline.html %}
 {% include team.html %}
