--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,8 +4,8 @@ layout: default
 {% include navheader.html %}
 
 {% include whatwedo.html %}
+{% include whoweare.html %}
 {% include about.html %}
-{% include timeline.html %}
 {% include team.html %}
 {% include clients.html %}
 {% include contact.html %}
