Change section about to aboutus

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
 
 {% include whatwedo.html %}
 {% include whoweare.html %}
-{% include about.html %}
+{% include aboutus.html %}
 {% include team.html %}
 {% include clients.html %}
 {% include contact.html %}
