Update contact us section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,4 +8,4 @@ layout: default
 {% include aboutus.html %}
 {% include team.html %}
 {% include clients.html %}
-{% include contact.html %}
+{% include contactus.html %}
