Change Who we are to Why we do it

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,8 @@ layout: default
 ---
 {% include navheader.html %}
 
-{% include whoweare.html %}
 {% include whatwedo.html %}
+{% include whywedoit.html %}
 {% include wherewemeet.html %}
 {% include aboutus.html %}
 {% include team.html %}
