--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,4 +8,5 @@ layout: default
 {% include wherewemeet.html %}
 {% include aboutus.html %}
 {% include team.html %}
+{% include supportus.html %}
 {% include contactus.html %}
