--- a/_includes/whatwedo.html
+++ b/_includes/whatwedo.html
@@ -1,58 +1,34 @@
 <!-- What we do -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
-  <section class="page-section" id="{{ site.data.sitetext[site.locale].whatwedo.section | default: "whatwedo" }}">
-    <div class="container">
-	
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].whatwedo.title | default: "Default" }}</h2>
-          {% if site.data.sitetext[site.locale].whatwedo.text %}
-		  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].whatwedo.text }}</h3>
-		  {% endif %}
-        </div>
+<section class="page-section" id="{{ site.data.sitetext[site.locale].whatwedo.section | default: "whatwedo" }}">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].whatwedo.title | default: "What we do" }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].whatwedo.text | default: "" }}</h3>
       </div>
-	  
-      <div class="row text-center">
-	  {% for whatwedo in site.data.sitetext[site.locale].whatwedo.list %}
-        <div class="col-md-4">
-          <span class="fa-stack fa-4x">
-            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-            <i class="{{ whatwedo.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">{{ whatwedo.title | markdownify }}</h4>
-          {% if whatwedo.desc %}<div class="text-muted">{{ whatwedo.desc | markdownify }}</div>{% endif %}
-        </div>
-	  {% endfor %}
-      </div>
-	  
     </div>
-  </section>
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center">
+        <div class="large text-muted">{{ site.data.sitetext[site.locale].whatwedo.body | markdownify }}</div>
+      </div>
+    </div>
+  </div>
+</section>
 {% else %}
 <section class="page-section" id="{{ site.data.sitetext.whatwedo.section | default: "whatwedo" }}">
   <div class="container">
-
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.whatwedo.title | default: "Default" }}</h2>
-        {% if site.data.sitetext.whatwedo.text %}
-    <h3 class="section-subheading text-muted">{{ site.data.sitetext.whatwedo.text }}</h3>
-    {% endif %}
+        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.whatwedo.title | default: "What we do" }}</h2>
+        <h3 class="section-subheading text-muted">{{ site.data.sitetext.whatwedo.text | default: "" }}</h3>
       </div>
     </div>
-  
-    <div class="row text-center">
-  {% for whatwedo in site.data.sitetext.whatwedo.list %}
-      <div class="col-md-4">
-        <span class="fa-stack fa-4x">
-          <i class="fas fa-circle fa-stack-2x text-primary"></i>
-          <i class="{{ whatwedo.icon | default: "fas fa-shopping-cart" }} fa-stack-1x fa-inverse"></i>
-        </span>
-        <h4 class="service-heading">{{ whatwedo.title | markdownify }}</h4>
-        {% if whatwedo.desc %}<div class="text-muted">{{ whatwedo.desc | markdownify }}</div>{% endif %}
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center">
+        <div class="large text-muted">{{ site.data.sitetext.whatwedo.body | markdownify }}</div>
       </div>
-  {% endfor %}
     </div>
-  
   </div>
 </section>
 {% endif %}
