--- a/_includes/aboutus.html
+++ b/_includes/aboutus.html
@@ -1,35 +1,61 @@
 <!-- About us -->
 {% if site.locale and site.locale != "" and site.locale != nil %}
 <section class="page-section" id="{{ site.data.sitetext[site.locale].aboutus.section | default: "aboutus" }}">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].aboutus.title | default: "About Us" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].aboutus.text | default: "" }}</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <div class="large text-muted">{{ site.data.sitetext[site.locale].aboutus.body | markdownify }}</div>
-      </div>
-    </div>
+<div class="container">
+  <div class="row">
+	<div class="col-lg-12 text-center">
+	  <h2 class="section-heading text-uppercase">{{ site.data.sitetext[site.locale].aboutus.title }}</h2>
+	  <h3 class="section-subheading text-muted">{{ site.data.sitetext[site.locale].aboutus.text }}</h3>
+	</div>
   </div>
+  <div class="row d-flex justify-content-center">
+  {% for person in site.data.sitetext[site.locale].aboutus.people %}
+	<div class="col-sm-4">
+	  <div class="team-member">
+		<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
+		<h4>{{ person.name }}</h4>
+		<p class="text-muted">{{ person.role }}</p>
+		<ul class="list-inline social-buttons">
+		</ul>
+	  </div>
+	</div>
+  {% endfor %}
+  </div>
+  <div class="row">
+	<div class="col-lg-8 mx-auto text-center">
+	  <div class="large text-muted">{{ site.data.sitetext[site.locale].aboutus.subtext | markdownify }}</div>
+	</div>
+  </div>
+</div>
 </section>
 {% else %}
 <section class="page-section" id="{{ site.data.sitetext.aboutus.section | default: "aboutus" }}">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">{{ site.data.sitetext.aboutus.title | default: "About Us" }}</h2>
-        <h3 class="section-subheading text-muted">{{ site.data.sitetext.aboutus.text | default: "" }}</h3>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-8 mx-auto text-center">
-        <div class="large text-muted">{{ site.data.sitetext.aboutus.body | markdownify }}</div>
-      </div>
-    </div>
-  </div>
+	<div class="container">
+	  <div class="row">
+		<div class="col-lg-12 text-center">
+		  <h2 class="section-heading text-uppercase">{{ site.data.sitetext.aboutus.title }}</h2>
+		  <h3 class="section-subheading text-muted">{{ site.data.sitetext.aboutus.text }}</h3>
+		</div>
+	  </div>
+	  <div class="row d-flex justify-content-center">
+	  {% for person in site.data.sitetext.aboutus.people %}
+		<div class="col-sm-4">
+		  <div class="team-member">
+			<img class="mx-auto rounded-circle" src="{{ person.image }}" alt="">
+			<h4>{{ person.name }}</h4>
+			<p class="text-muted">{{ person.role }}</p>
+			<ul class="list-inline social-buttons">
+			</ul>
+		  </div>
+		</div>
+	  {% endfor %}
+	  </div>
+	  <div class="row">
+		<div class="col-lg-8 mx-auto text-center">
+		  <div class="large text-muted">{{ site.data.sitetext.aboutus.subtext | markdownify }}</div>
+		</div>
+	  </div>
+	</div>
 </section>
 {% endif %}
-<!-- End About us -->
+<!-- End About Us -->
